--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,35 +1,28 @@
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  color: #002B6F;
 
-  header {
-    h1 {
-      margin: 0;
-      padding: 20px;
-    }
+  div {
+    background-color: #F9BBE4;
+    margin-bottom: 50px;
+    font-size: 4em;
+    width: 20em;
+    text-align: center;
+    border-radius: 2em;
+    padding: 15px;
   }
 
-  section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-  }
-
-  footer {
-    display: flex;
-    justify-content: flex-end;
-    padding: 20px;    
-
-    a {
-      &:visited {
-        color: unset;
-      }
-
-      &:hover {
-        color: lighten($color: black, $amount: 25);
-      }
-    }
+  button {
+    all: unset;
+    width: 10em;
+    height: 10em;
+    background-size: contain;
+    background-color: transparent;
+    border-radius: 50%;
+    box-shadow: 3px 3px 10px #000;
   }
 }
