--- a/src/components/dog-navigator/dog-navigator.scss
+++ b/src/components/dog-navigator/dog-navigator.scss
@@ -6,14 +6,29 @@
   justify-content: space-between;
 
   .part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex: 1;
     border-radius: 1em;
     margin: 1em;
     background-color: #FEE7F9;
     cursor: pointer;
+    padding-bottom: 0.5em;
 
     &.selected {
       background-color: #F2BBE5;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      flex: 1;
+      
+      img {
+        align-self: center;
+        width: 4em;
+      }
     }
   }
   
