Add special final phase screen state

--- a/src/components/dog-creator/dog-creator.scss
+++ b/src/components/dog-creator/dog-creator.scss
@@ -24,6 +24,13 @@
     padding: 0.5em;
     border-radius: 1em;
     width: 19em;
+
+    &.Vacht {
+      flex: unset;
+      width: 22em;
+      border-radius: 2em;
+      padding: 15px;
+    }
   }
 
   .nav {
