Small warning fixes

--- a/src/components/dog-creator/dog-creator.scss
+++ b/src/components/dog-creator/dog-creator.scss
@@ -25,12 +25,12 @@
     border-radius: 1em;
     width: 19em;
 
-    &.Vacht {
-      flex: unset;
-      width: 22em;
-      border-radius: 2em;
-      padding: 15px;
-    }
+    // &.Vacht {
+    //   flex: unset;
+    //   width: 22em;
+    //   border-radius: 2em;
+    //   padding: 15px;
+    // }
   }
 
   .nav {
