--- a/src/components/dog-creator/dog-creator.scss
+++ b/src/components/dog-creator/dog-creator.scss
@@ -4,17 +4,8 @@
   justify-content: center;
   align-items: center;
   height: calc(100vh - 6em);
-  color: #002B6F;
+  color: #002b6f;
   padding: 3em;
-
-  .creator, .nav {
-    background-color: #F9BBE4;
-    margin-bottom: 50px;
-    font-size: 4em;
-    text-align: center;
-    border-radius: 2em;
-    padding: 15px;
-  }
 
   .creator {
     display: flex;
@@ -23,28 +14,20 @@
     flex: 1;
     padding: 0.5em;
     border-radius: 1em;
-    width: 19em;
+    width: 19em;background-color: #f9bbe4;
+    margin-bottom: 50px;
+    font-size: 4em;
+    text-align: center;
 
-    // &.Vacht {
-    //   flex: unset;
-    //   width: 22em;
-    //   border-radius: 2em;
-    //   padding: 15px;
-    // }
-  }
-
-  .nav {
-    width: 22em;
-    margin-bottom: 0;
-  }
-  
-  button {
-    all: unset;
-    width: 10em;
-    height: 10em;
-    background-size: contain;
-    background-color: transparent;
-    border-radius: 50%;
-    box-shadow: 3px 3px 10px #000;
+    input {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      font-size: 3em;
+      color: #002b6f;
+      background: none;
+      border: none;
+      outline: none;
+    }
   }
 }
