--- a/src/components/dog-navigator/dog-navigator.scss
+++ b/src/components/dog-navigator/dog-navigator.scss
@@ -31,6 +31,16 @@
       }
     }
   }
+
+  .info {
+    display: flex;
+    align-items: center;
+    border-radius: 1em;
+    margin: 1em;
+    background-color: #FEE7F9;
+    padding: 0 1em;
+    font-size: 2em;
+  }
   
   button {
     all: unset;
