--- a/src/components/printout/knob.scss
+++ b/src/components/printout/knob.scss
@@ -2,8 +2,8 @@
     height: 100px;
     width: 100px;
     position: relative;
-    transform: scale(2);
-    margin: 40px;
+    transform: scale(1.5);
+    margin: 40px 40px 0 40px;
 
     .inner {
         position: absolute;
