--- a/src/components/printout/printout.scss
+++ b/src/components/printout/printout.scss
@@ -1,73 +1,79 @@
 @media print {
-    @page { size: landscape; }
+  @page {
+    size: landscape;
+  }
 }
 
 .printout {
-    margin: 40px;
-    color: #002b6f;
+  margin: 40px;
+  color: #002b6f;
 
-    .health {
+  .health {
+    display: flex;
+    background-color: #fff3fb;
+    padding: 40px;
+    border-radius: 20px;
+
+    .text {
+      display: flex;
+      flex-direction: column;
+
+      :first-child {
+        font-size: 30px;
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  .dog {
+    display: flex;
+    margin: 20px 0;
+
+    .creator {
+      flex: 2;
+      margin-right: 20px;
+      border-radius: 40px;
+    }
+
+    span {
+      flex: 1;
+    }
+  }
+
+  .races {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 100px;
+  }
+
+  .page2 {
+    display: flex;
+    padding-top: 40px;
+
+    .tips {
+      height: 650px;
+      flex: 1;
+      background-color: #fff3fb;
+      padding: 40px;
+      border-radius: 20px;
+      margin-right: 20px;
+      font-size: 14px;
+
+      .bullet {
         display: flex;
-        flex-direction: column;
-        background-color: #FFF3FB;   
-        padding: 40px;
-        border-radius: 20px;
-
         :first-child {
-            font-size: 30px;
-            margin-bottom: 10px;
+          margin-right: 20px;
         }
+      }
     }
 
-    .dog {
-        display: flex;
-        margin: 20px 0;
+    .risks {
+      height: 730px;
+      flex: 4;
 
-        .creator {
-            flex: 2;
-            margin-right: 20px;
-            border-radius: 40px;
-        }
-
-        span {
-            flex: 1;
-        }
+      img {
+        margin-bottom: 10px;
+      }
     }
-
-    .races {
-        display: flex;
-        justify-content: space-evenly;
-        margin-bottom: 100px;
-    }
-
-    .page2 {
-        display: flex;
-        padding-top: 40px;
-
-        .tips {
-            height: 650px;
-            flex: 1;
-            background-color: #FFF3FB;   
-            padding: 40px;
-            border-radius: 20px;
-            margin-right: 20px;
-            font-size: 14px;
-
-            .bullet {
-                display: flex;
-                :first-child {
-                    margin-right: 20px;
-                }
-            }
-        }
-
-        .risks {
-            height: 730px;
-            flex: 4;
-
-            img {
-                margin-bottom: 10px;
-            }
-        }
-    }
+  }
 }
